# k8s-exec-tcp

./: Cargo.toml  README.md  run.sh
src/: lib.rs  main.rs
