[package]
name = "k8s-pod-exec-tcp-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.2"
#tracing-fmt = "0.1"
tokio-util = "0.7.9"
kube = { version = "0.86.0", default-features = true, features = [
    "derive",
    "runtime",
    "admission",
    "ws",
] } # Library for talking to Kubernetes API
k8s-openapi = { version = "0.20.0", default-features = false, features = [
    "v1_26",
] } # Kube-rs depends on k8s-openapi
futures = "0.3"
serde = "1"
serde_json = "1.0"
schemars = "0.8"
anyhow = "1.0.44"
#kube-derive = { version = "^0.86.0", default-features = false }
chrono = "0.4"